crates/ars-components/src/overlay/snapshots/ars_components__overlay__popover__tests__popover_title_with_id.snap
---
source: crates/ars-components/src/overlay/popover.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).title_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "title",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "popover",
            ),
        ),
        (
            Id,
            String(
                "popover-title",
            ),
        ),
    ],
    styles: [],
}
